# yklibpy

./: .gitignore  .prettierrc  mypy.ini  pyproject.toml
src/yklibpy/: __init__.py  __main__.py
src/yklibpy/common/: __init__.py  convert_yaml_strip_tags.py  env.py  info.py  safedict.py  store.py  topconfig.py  util.py  util_json.py  util_yaml.py
src/yklibpy/db/: __init__.py  db_base.py  db_yaml.py
src/yklibpy/htmlparser/: __init__.py  amazon.py  amazonsavedcartscraper.py  app.py  ascraper.py  configprepare.py  fanzadoujinbasketscraper.py  fanzadoujinboughtscraper.py  fanzadoujinpurchasedscraper.py  fanzadoujinscraper.py  h3scraper.py  htmlop.py  kuscraper.py  preparex.py  progress.py  scraper.py  udemyscraper.py
src/yklibpy/htmlparser/misc/: __init__.py  anchortaginfo.py  anchortagx.py  priceinfo.py  tagx.py
src/yklibpy/tomlop/: __init__.py  fileitem.py  tomlop.py
